<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#386189"
    tools:context=".InfosAcaoInativaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_bar_acoes"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/fundo_card">

        <TextView
            android:id="@+id/text_minhasacoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/minionpro"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:text="AZUL SA"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/letras"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <TextView
            android:id="@+id/text_ticker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/minionpro"
            android:text="AZUL4"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/letras"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.352">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/info_acoes"
        android:layout_width="360dp"
        android:layout_height="300dp"
        android:layout_marginTop="25dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar_acoes">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/fundo_card">

            <androidx.cardview.widget.CardView
                android:id="@+id/setor"
                android:layout_width="330dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/fundo_card_sec"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/segmento"
                        android:fontFamily="@font/minionpro"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textColor="@color/letras"
                        android:layout_marginTop="7dp"
                        android:layout_marginStart="10dp">
                    </TextView>

                    <TextView
                        android:id="@+id/segmento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Aviação"
                        android:fontFamily="@font/minionpro"
                        android:textSize="23sp"
                        android:textStyle="bold"
                        android:textColor="@color/letras"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="102dp">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/alerta_venda"
                android:layout_width="330dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/fundo_card_sec"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/setor">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alerta_de_compra"
                        android:fontFamily="@font/minionpro"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textColor="@color/letras"
                        android:layout_marginTop="7dp"
                        android:layout_marginStart="10dp">
                    </TextView>

                    <TextView
                        android:id="@+id/alerta_compra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="R$ 18,80"
                        android:fontFamily="@font/minionpro"
                        android:textSize="23sp"
                        android:textStyle="bold"
                        android:textColor="@color/letras"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="45dp">
                    </TextView>

                    <ImageButton
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/alterar"
                        android:scaleType="centerCrop"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="12dp"
                        android:alpha="0.6"
                        android:background="?attr/selectableItemBackgroundBorderless">

                    </ImageButton>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/valor_mercado"
                android:layout_width="330dp"
                android:layout_height="145dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/fundo_card_sec"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/alerta_venda">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/valor_no_mercado"
                        android:fontFamily="@font/minionpro"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textColor="@color/letras"
                        android:layout_margin="10dp">
                    </TextView>

                    <TextView
                        android:id="@+id/valor_mercado_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="R$ 124.186.395.306,00"
                        android:fontFamily="@font/minionpro"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/letras"
                        android:layout_marginStart="10dp">
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/n_acoes"
                        android:fontFamily="@font/minionpro"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textColor="@color/letras"
                        android:layout_margin="10dp">
                    </TextView>

                    <TextView
                        android:id="@+id/n_acoes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="2.868.344.556"
                        android:fontFamily="@font/minionpro"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/letras"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp">
                    </TextView>
                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/graficos"
        android:layout_width="360dp"
        android:layout_height="245dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_acoes"
        app:layout_constraintVertical_bias="0.254">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/fundo_card_sec">

            <TextView
                android:id="@+id/text_semana"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@drawable/text_border_fcard"
                android:padding="5dp"
                android:fontFamily="@font/minionpro"
                android:textStyle="bold"
                android:text="@string/semana"
                android:textSize="15sp"
                android:textColor="@color/letras"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </TextView>

            <com.robinhood.spark.SparkView
                android:id="@+id/sparkWeek"
                android:layout_width="180dp"
                android:layout_height="80dp"
                app:layout_constraintTop_toBottomOf="@id/text_semana"
                app:layout_constraintStart_toStartOf="parent"
                app:spark_lineColor="@color/spark"
                android:background="@drawable/text_border_fcards">
            </com.robinhood.spark.SparkView>

            <TextView
                android:id="@+id/text_mes"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@drawable/text_border_fcard"
                android:padding="5dp"
                android:fontFamily="@font/minionpro"
                android:textStyle="bold"
                android:text="@string/mes"
                android:textSize="15sp"
                android:textColor="@color/letras"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </TextView>

            <com.robinhood.spark.SparkView
                android:id="@+id/sparkMonth"
                android:layout_width="180dp"
                android:layout_height="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_mes"
                app:spark_lineColor="@color/spark"
                android:background="@drawable/text_border_fcards">
            </com.robinhood.spark.SparkView>

            <TextView
                android:id="@+id/text_meses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_border_fcard"
                android:padding="5dp"
                android:fontFamily="@font/minionpro"
                android:textStyle="bold"
                android:text="3 Meses"
                android:textSize="15sp"
                android:textColor="@color/letras"
                app:layout_constraintTop_toBottomOf="@id/sparkWeek"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </TextView>

            <com.robinhood.spark.SparkView
                android:id="@+id/sparkMeses"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                app:layout_constraintTop_toBottomOf="@id/text_meses"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:spark_lineColor="@color/spark"
                android:background="@color/fundo_card_sec">
            </com.robinhood.spark.SparkView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottomnav_bg"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_nav_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>